# Data-Integration-Case-Study

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  manage.py  notes.md  pyproject.toml
api_data_pipeline/: asgi.py  settings.py  urls.py  wsgi.py
api_data_pipeline/apps/: constants.py
api_data_pipeline/apps/news/: apps.py  constants.py  models.py  serializers.py  views.py
api_data_pipeline/apps/news/migrations/: 0001_initial.py
api_data_pipeline/apps/weather/: apps.py  constants.py  models.py  serializers.py  views.py
api_data_pipeline/apps/weather/migrations/: 0001_initial.py
