[tool.poetry]
name = "data-integration-case-study"
version = "0.1.0"
description = ""
authors = ["Arash Farzaneh Taleghani <arashfataw@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
requests = "^2.30.0"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
moment = "^0.12.1"
mypy = "^1.3.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
